--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -6,8 +6,8 @@
 @import "global/utils/box";
 @import "global/utils/transitions";
 
-@import "global/atom/texts";
-@import "global/atom/buttons";
+@import "global/input-box";
+@import "global/row";
 
 // @import "global/molecule/wp-gallery";
 // @import "global/molecule/wp-content";
