--- a/src/assets/scss/settings/_fonts.scss
+++ b/src/assets/scss/settings/_fonts.scss
@@ -10,5 +10,5 @@ $path: "../fonts/";
 // }
 
 //ENDFONTS
-$font__fancy: Rubik, sans-serif;
-$font__main: "Source Sans Pro", sans-serif;
+$font__fancy: Roboto, sans-serif;
+$font__main: sans-serif;
