--- a/src/assets/scss/settings/_variables.scss
+++ b/src/assets/scss/settings/_variables.scss
@@ -29,8 +29,8 @@ $m8: 16.8rem;
 $m9: 27.2rem;
 
 // Margin RTE
-$margin-p: $m3;
-$margin-item-rte: $m5;
+$mb-p: $m3;
+$mb-item: $m5;
 
 $mt-h1: 2em;
 $mb-h1: 1.5em;
