--- a/src/assets/scss/global/row.scss
+++ b/src/assets/scss/global/row.scss
@@ -1,9 +1,3 @@
-<template>
-  <div class="row">
-    <slot></slot>
-  </div>
-</template>
-<style lang="scss">
 .row {
   display: flex;
 }
@@ -15,4 +9,8 @@
     margin-left: $m3;
   }
 }
-</style>
+@for $i from 1 through 10 {
+  .col-#{$i} {
+    flex: #{$i};
+  }
+}
