--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -6,6 +6,7 @@
 @import "global/utils/box";
 @import "global/utils/transitions";
 
+@import "global/pagination";
 @import "global/input-box";
 @import "global/row";
 
