--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -9,6 +9,7 @@
 @import "global/pagination";
 @import "global/input-box";
 @import "global/row";
+@import "global/vue-transitions";
 
 // @import "global/molecule/wp-gallery";
 // @import "global/molecule/wp-content";
