--- a/src/assets/scss/settings/_colors.scss
+++ b/src/assets/scss/settings/_colors.scss
@@ -8,7 +8,7 @@
 
 // $color__page-bg: #fff;
 
-$color__core: #3991cc;
+$color__core: #545454;
 $color__core-font: #35403e;
 
 $color__text: #606060;
