--- a/src/assets/scss/settings/_variables.scss
+++ b/src/assets/scss/settings/_variables.scss
@@ -35,11 +35,11 @@ $mb-item: $m5;
 $mt-h1: 2em;
 $mb-h1: 1.5em;
 
-$mt-h2: 0;
-$mb-h2: $m4;
+$mt-h2: 1.5em;
+$mb-h2: 0.8em;
 
-$mt-h3: $m4;
-$mb-h3: 1.2rem;
+$mt-h3: 1em;
+$mb-h3: 1.2em;
 
 $mt-h4: 0;
 $mb-h4: 0.555em;
