--- a/src/assets/scss/wp-content.scss
+++ b/src/assets/scss/wp-content.scss
@@ -5,7 +5,8 @@
 
 // Image
 .wp-block-image,
-.wp-block-embed {
+.wp-block-embed,
+.wp-block-video {
   margin-bottom: $mb-item;
   display: inline-flex;
   flex-direction: column;
