--- a/src/assets/scss/wp-rte/_gallery.scss
+++ b/src/assets/scss/wp-rte/_gallery.scss
@@ -106,7 +106,7 @@
     &-btn {
       height: 1.2rem;
       width: 1.2rem;
-      border-radius: 5px;
+      border-radius: 50%;
       background-color: rgba(0, 0, 0, 0.12);
       &:focus {
         outline: none;
