recup animation scroll

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -10,6 +10,7 @@
 @import "global/input-box";
 @import "global/row";
 @import "global/vue-transitions";
+@import "global/animations-scroll";
 
 @import "global/page/page-general";
 @import "global/page/page-front";
