--- a/src/assets/scss/global/utils/box.scss
+++ b/src/assets/scss/global/utils/box.scss
@@ -24,3 +24,30 @@
     }
   }
 }
+
+// Centrer une image comme un bg contain
+.img-contain {
+  position: relative;
+  & > * {
+    position: absolute;
+    max-height: 100%;
+    max-width: 100%;
+  }
+
+  &-center {
+    @extend .img-contain;
+    & > * {
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  &-left {
+    @extend .img-contain;
+    & > * {
+      top: 50%;
+      left: 0%;
+      transform: translate(-0%, -50%);
+    }
+  }
+}
