--- a/src/assets/scss/settings/_variables.scss
+++ b/src/assets/scss/settings/_variables.scss
@@ -49,3 +49,10 @@ $mb-h5: 0;
 
 // $mt-h6: 1.8em;
 // $mb-h6: 1em;
+
+// Zindexes
+$z-header: 100;
+$transition-s: 0.25s ease;
+$transition-m: 0.5s ease;
+$transition-l: 0.8s ease;
+$bshadow: 0 0 5rem rgba(0, 0, 0, 0.2);
