--- a/src/assets/scss/settings/_colors.scss
+++ b/src/assets/scss/settings/_colors.scss
@@ -16,4 +16,6 @@ $color__title: #3b3b3b;
 $color__success: #95c11e;
 $color__error: #ff4136;
 
+$color__overlay: rgba(0, 0, 0, 0.7);
+
 $color__page-bg: #fff;
