--- a/src/assets/scss/settings/_variables.scss
+++ b/src/assets/scss/settings/_variables.scss
@@ -52,6 +52,8 @@ $mb-h5: 0;
 
 // Zindexes
 $z-header: 100;
+$z-overlay: 120;
+$z-popin: 150;
 $transition-s: 0.25s ease;
 $transition-m: 0.5s ease;
 $transition-l: 0.8s ease;
