--- a/src/assets/scss/global/animations-scroll.scss
+++ b/src/assets/scss/global/animations-scroll.scss
@@ -20,6 +20,11 @@ $delay: 0.2s;
       transform: translateY(8rem);
       opacity: 0;
     }
+    &[scroll-anim="x8"],
+    [scroll-anim="x8"] {
+      transform: translateX(8rem);
+      opacity: 0;
+    }
     &[scroll-anim="scale0"],
     [scroll-anim="scale0"] {
       transform: scale(0);
