--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -1,6 +1,7 @@
 @import "settings/_variables";
 @import "settings/_colors";
 @import "settings/_fonts";
+@import "settings/_animations";
 @import "settings/mixins/_emify";
 @import "settings/mixins/_media-queries";
 @import "settings/mixins/_quark-text";
