--- a/src/assets/scss/global/utils/layout.scss
+++ b/src/assets/scss/global/utils/layout.scss
@@ -31,10 +31,11 @@
   max-width: 100%;
   width: 100%;
   padding-bottom: 56.25%;
+  overflow: hidden;
   & > * {
-    width: 100%;
-    height: 100%;
     position: absolute;
+    width: calc(100% + 2px);
+    height: calc(100% + 2px);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
