--- a/src/assets/scss/wp-content.scss
+++ b/src/assets/scss/wp-content.scss
@@ -28,4 +28,10 @@
 // Embed
 .wp-block-embed {
   margin-bottom: $mb-item;
+  iframe{
+    max-width: 100%;
+  }
+  @include RWD(mobile){
+    max-width: 100%;
+  }
 }
