--- a/src/assets/scss/settings/mixins/_media-queries.scss
+++ b/src/assets/scss/settings/mixins/_media-queries.scss
@@ -7,6 +7,10 @@
     @media only screen and (min-width: $break-small + "px") and (max-width: $break-large - 1 + "px") {
       @content;
     }
+  } @else if $media==tabsmall {
+    @media only screen and (max-width: 1000 + "px") {
+      @content;
+    }
   } @else if $media==tablet {
     @media only screen and (max-width: $break-large - 1 + "px") {
       @content;
