--- a/src/assets/scss/wp-content.scss
+++ b/src/assets/scss/wp-content.scss
@@ -29,3 +29,25 @@
 .wp-block-embed {
   margin-bottom: $mb-item;
 }
+
+
+// Embed 57%
+.wp-block-embed-youtube,
+.wp-block-embed-vimeo{
+  width: 100%;
+  .wp-block-embed__wrapper{
+    position: relative;
+    height: 0;
+    padding-bottom: 56.7%;
+
+    iframe{
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+    }
+  }
+}
